--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head><p style="font-family: Arial">
+<head><h1 style="font-family: Arial">
   <title>Leo's unblocked games</title>
      <h1>Leo's unblocked games</h1>
 </p>
