--- a/index.html
+++ b/index.html
@@ -8,61 +8,61 @@
 </head> 
 <body>
   <p style="font-family: Arial">
-     <a href="https://leoisbadatmakeingthings.github.io/idk/Games/BTD1/">Bloons TD (Flash)</a>
+     <a href="https://memcat.pages.dev/Games/BTD1/">Bloons TD (Flash)</a>
   <br>
-<a href="https://leoisbadatmakeingthings.github.io/idk/Games/BTD2">Bloons TD 2 (Flash)</a>
+<a href="https://memcat.pages.dev/Games/BTD2/">Bloons TD 2 (Flash)</a>
   <br>
-  <a href="https://leoisbadatmakeingthings.github.io/idk/Games/BTD3/">Bloons TD 3 (Flash)</a>
+  <a href="https://memcat.pages.dev/Games/BTD3/">Bloons TD 3 (Flash)</a>
   <br>
-  <a href="https://leoisbadatmakeingthings.github.io/idk/Games/BTD4/">Bloons TD 4 (Flash)</a>
+  <a href="https://memcat.pages.dev/Games/BTD4/">Bloons TD 4 (Flash)</a>
   <br>
-  <a href="https://leoisbadatmakeingthings.github.io/idk/Games/BTD4E">Bloons TD 4 Expansion (Flash)</a>
+  <a href="https://memcat.pages.dev/Games/BTD4E">Bloons TD 4 Expansion (Flash)</a>
   <br>
-        <a href="https://leoisbadatmakeingthings.github.io/idk/Games/BTD5">Bloons TD 5</a>
+        <a href="https://memcat.pages.dev/Games/BTD5">Bloons TD 5</a>
   <br>
 <a href="https://leoisbadatmakeingthings.github.io/idk-testing/clicker/index.html">Cookie Clicker</a>
   <br>
-    <a href="https://leoisbadatmakeingthings.github.io/idk/Games/tunnelrush/ ">Tunnel Rush</a>
+    <a href="https://memcat.pages.dev/Games/tunnelrush/ ">Tunnel Rush</a>
   <br>
-    <a href="https://leoisbadatmakeingthings.github.io/idk/Games/slope/ ">Slope</a>
+    <a href="https://memcat.pages.dev/Games/slope/ ">Slope</a>
   <br>
-  <a href="https://leoisbadatmakeingthings.github.io/idk/Games/forest_temple/">Fireboy and Watergirl - The Forest Temple (Flash)</a>
+  <a href="https://memcat.pages.dev/Games/forest_temple/">Fireboy and Watergirl - The Forest Temple (Flash)</a>
   <br>
-  <a href="https://leoisbadatmakeingthings.github.io/idk/Games/learn_to_fly/">Learn to Fly (Flash)</a>
+  <a href="https://memcat.pages.dev/Games/learn_to_fly/">Learn to Fly (Flash)</a>
   <br>
-    <a href="https://leoisbadatmakeingthings.github.io/idk/Games/learn_to_fly_2/">Learn to Fly 2 (Flash)</a>
+    <a href="https://memcat.pages.dev/Games/learn_to_fly_2/">Learn to Fly 2 (Flash)</a>
   <br>
-<a href="https://leoisbadatmakeingthings.github.io/idk/Games/sonic_1">Sonic 1 (Genesis)</a>
+<a href="https://memcat.pages.dev/Games/sonic_1">Sonic 1 (Genesis)</a>
   <br>
-  <a href="https://leoisbadatmakeingthings.github.io/idk/Games/sonic_2">Sonic 2 (Genesis)</a>
+  <a href="https://memcat.pages.dev/Games/sonic_2">Sonic 2 (Genesis)</a>
   <br>
-    <a href="https://leoisbadatmakeingthings.github.io/idk/Games/puyo_puyo_2">Puyo Puyo 2 (Genesis)</a>
+    <a href="https://memcat.pages.dev/Games/puyo_puyo_2">Puyo Puyo 2 (Genesis)</a>
   <br>
-    <a href="https://leoisbadatmakeingthings.github.io/idk/Games/run/">Run (Flash)</a>
+    <a href="https://memcat.pages.dev/Games/run/">Run (Flash)</a>
   <br>
-      <a href="https://leoisbadatmakeingthings.github.io/idk/Games/run_2/">Run 2 (Flash)</a>
+      <a href="https://memcat.pages.dev/Games/run_2/">Run 2 (Flash)</a>
   <br>
         <a href="https://leoisbadatmakeingthings.github.io/run-3/tn6pS9dCf37xAhkJv/">Run 3</a>
   <br>
-    <a href="https://leoisbadatmakeingthings.github.io/idk/Games/super_mario_world/">Super Mario World (SNES)</a>
+    <a href="https://memcat.pages.dev/Games/super_mario_world/">Super Mario World (SNES)</a>
   <br>
-        <a href="https://leoisbadatmakeingthings.github.io/idk/Games/sm64js/index.html">Super Mario 64 (Javascript)</a>
+        <a href="https://memcat.pages.dev/Games/sm64js/index.html">Super Mario 64 (Javascript)</a>
   <br>
-   <a href="https://leoisbadatmakeingthings.github.io/idk/Games/Dr_mario/">Dr. Mario (NES)</a>
+   <a href="https://memcat.pages.dev/Games/Dr_mario/">Dr. Mario (NES)</a>
   <br>
-       <a href="https://leoisbadatmakeingthings.github.io/idk/Games/smb1/">Super Mario Bros. (NES)</a>
+       <a href="https://memcat.pages.dev/Games/smb1/">Super Mario Bros. (NES)</a>
   <br>
-       <a href="https://leoisbadatmakeingthings.github.io/idk/Games/smb3/">Super Mario Bros. 3 (NES)</a>
+       <a href="https://memcat.pages.dev/Games/smb3/">Super Mario Bros. 3 (NES)</a>
   <br>
-      <a href="https://leoisbadatmakeingthings.github.io/idk/Games/pokemon_yellow/">Pokemon Yellow (GB)</a>
+      <a href="https://memcat.pages.dev/Games/pokemon_yellow/">Pokemon Yellow (GB)</a>
   <br>
-        <a href="https://leoisbadatmakeingthings.github.io/idk/Games/pokemon_crystal/">Pokemon Crystal (GB)</a>
+        <a href="https://memcat.pages.dev/Games/pokemon_crystal/">Pokemon Crystal (GB)</a>
   <br>
-            <a href="https://leoisbadatmakeingthings.github.io/idk/Games/pokemon_emerald/">Pokemon Emerald (GBA)</a>
+            <a href="https://memcat.pages.dev/Games/pokemon_emerald/">Pokemon Emerald (GBA)</a>
   <br>
   More games will be added soon.
   <br>
-        <a href="https://leoisbadatmakeingthings.github.io/idk/test%20files/contact.html">Report a Bug</a>
+        <a href="https://memcat.pages.dev/test%20files/contact.html">Report a Bug</a>
   <br>
   </p>
 </body>
