--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> 
 <body>
   <p style="font-family: Arial">
-     <a href="https://memcat.pages.dev/Games/BTD1/">Bloons TD (Flash)</a>
+     <a href="Games/BTD1/">Bloons TD (Flash)</a>
   <br>
 <a href="https://memcat.pages.dev/Games/BTD2/">Bloons TD 2 (Flash)</a>
   <br>
