--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <br>
       <a href="Games/run_2/">Run 2 (Flash)</a>
   <br>
-        <a href="https://leoisbadatmakeingthings.github.io/run-3/tn6pS9dCf37xAhkJv/">Run 3</a>
+        <a href="Games/run-3/tn6pS9dCf37xAhkJv/">Run 3</a>
   <br>
     <a href="Games/super_mario_world/">Super Mario World (SNES)</a>
   <br>
