--- a/Games/BTD4/index.html
+++ b/Games/BTD4/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <h1>Bloons TD 4</h1>
+        <title>Bloons TD 4 On Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
     <body>
@@ -21,7 +23,8 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD4/bloonstd4.swf', 'ruffle', 500, 500);
+swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD4/bloonstd4norankmod.swf', 'ruffle', 500, 500);
         </script>
+        This is a modded version with all the premiums unlocked. If you also would like to start with everything unlocked,<a href="rank60.html "> Click Here</a>    
     </body>
 </html>
