--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       <a href="Games/run_2/">Run 2 (Flash)</a>
   <br>
         <a href="Games/run-3/tn6pS9dCf37xAhkJv/">Run 3</a>
+    <br>
+    <a href="Games/worlds-hardest-game/">World's Hardest Game (Flash)</a>
   <br>
     <a href="Games/super_mario_world/">Super Mario World (SNES)</a>
   <br>
