--- a/Games/learn-to-fly-3/index.html
+++ b/Games/learn-to-fly-3/index.html
@@ -24,5 +24,6 @@ swfobject.embedSWF = function(url, cont, width, height){
 
 swfobject.embedSWF('https://memcat.pages.dev/Games/learn-to-fly-3/game.swf', 'ruffle', 640, 480);
         </script>
+        for a playable game, turn on ultra low quality mode in the settings.
     </body>
 </html>
