--- a/Games/learn-to-fly-3/index.html
+++ b/Games/learn-to-fly-3/index.html
@@ -25,5 +25,6 @@ swfobject.embedSWF = function(url, cont, width, height){
 swfobject.embedSWF('https://memcat.pages.dev/Games/learn-to-fly-3/game.swf', 'ruffle', 640, 480);
         </script>
         for a playable game, turn on ultra low quality mode in the settings.
+        if the game doesnt let you click on anything, right click then click back on the game.
     </body>
 </html>
