--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head> 
 <body>
   <p style="font-family: Arial">
-     <a href="Games/BTD1/">Bloons TD (Flash)</a>
+     <a href="Games/BTD1/">Bloons TD</a>
   <br>
-<a href="Games/BTD2/">Bloons TD 2 (Flash)</a>
+<a href="Games/BTD2/">Bloons TD 2</a>
   <br>
-  <a href="Games/BTD3/">Bloons TD 3 (Flash)</a>
+  <a href="Games/BTD3/">Bloons TD 3</a>
   <br>
-  <a href="Games/BTD4/">Bloons TD 4 (Flash)</a>
+  <a href="Games/BTD4/">Bloons TD 4</a>
   <br>
-  <a href="Games/BTD4E">Bloons TD 4 Expansion (Flash)</a>
+  <a href="Games/BTD4E">Bloons TD 4 Expansion</a>
   <br>
-      <a href="Games/BTD4/track-editor.html">Bloons TD 4 Track Editor (Flash)</a>
+      <a href="Games/BTD4/track-editor.html">Bloons TD 4 Track Editor</a>
   <br>
         <a href="Games/BTD5">Bloons TD 5</a>
   <br>
@@ -28,41 +28,42 @@
   <br>
     <a href="Games/slope/ ">Slope</a>
   <br>
-  <a href="Games/forest_temple/">Fireboy and Watergirl - The Forest Temple (Flash)</a>
+  <a href="Games/forest_temple/">Fireboy and Watergirl - The Forest Temple</a>
   <br>
-  <a href="Games/learn_to_fly/">Learn to Fly (Flash)</a>
+  <a href="Games/learn_to_fly/">Learn to Fly</a>
   <br>
-    <a href="Games/learn_to_fly_2/">Learn to Fly 2 (Flash)</a>
+    <a href="Games/learn_to_fly_2/">Learn to Fly 2</a>
   <br>
-<a href="Games/sonic_1">Sonic 1 (Genesis)</a>
+    <a href="Games/learn-to-fly-3/">Learn to Fly 3</a>
+<a href="Games/sonic_1">Sonic 1</a>
   <br>
-  <a href="Games/sonic_2">Sonic 2 (Genesis)</a>
+  <a href="Games/sonic_2">Sonic 2</a>
   <br>
-    <a href="Games/puyo_puyo_2">Puyo Puyo 2 (Genesis)</a>
+    <a href="Games/puyo_puyo_2">Puyo Puyo 2</a>
   <br>
-    <a href="Games/run/">Run (Flash)</a>
+    <a href="Games/run/">Run</a>
   <br>
-      <a href="Games/run_2/">Run 2 (Flash)</a>
+      <a href="Games/run_2/">Run 2</a>
   <br>
         <a href="Games/run-3/tn6pS9dCf37xAhkJv/">Run 3</a>
     <br>
-    <a href="Games/worlds-hardest-game/">World's Hardest Game (Flash)</a>
+    <a href="Games/worlds-hardest-game/">World's Hardest Game</a>
   <br>
-    <a href="Games/super_mario_world/">Super Mario World (SNES)</a>
+    <a href="Games/super_mario_world/">Super Mario World</a>
   <br>
-        <a href="Games/sm64js/index.html">Super Mario 64 (Javascript)</a>
+        <a href="Games/sm64js/index.html">Super Mario 64</a>
   <br>
-   <a href="Games/Dr_mario/">Dr. Mario (NES)</a>
+   <a href="Games/Dr_mario/">Dr. Mario</a>
   <br>
-       <a href="Games/smb1/">Super Mario Bros. (NES)</a>
+       <a href="Games/smb1/">Super Mario Bros.</a>
   <br>
-       <a href="Games/smb3/">Super Mario Bros. 3 (NES)</a>
+       <a href="Games/smb3/">Super Mario Bros. 3</a>
   <br>
-      <a href="Games/pokemon_yellow/">Pokemon Yellow (GB)</a>
+      <a href="Games/pokemon_yellow/">Pokemon Yellow</a>
   <br>
-        <a href="Games/pokemon_crystal/">Pokemon Crystal (GB)</a>
+        <a href="Games/pokemon_crystal/">Pokemon Crystal</a>
   <br>
-            <a href="Games/pokemon_emerald/">Pokemon Emerald (GBA)</a>
+            <a href="Games/pokemon_emerald/">Pokemon Emerald</a>
   <br>
   More games will be added soon.
   <br>
