--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
      <h1>Leo's unblocked games</h1>
 </p>
 </head> 
-<body>
-  bgColor="#FFFFFF"
+<body bgColor="#FFFFFF">
   <p style="font-family: Arial">
      <a href="Games/BTD1/">Bloons TD</a>
   <br>
