--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <h1>Leo's unblocked games</h1>
 </p>
 </head> 
-<body style="background:#FFFFFF">
+<body style="background:#111111">
   <p style="font-family: Arial">
      <a href="Games/BTD1/">Bloons TD</a>
   <br>
