--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </p>
 </head> 
 <body style="background:#111111">
-  <p style="font-family: Arial">
+  <p style="font-family: Arial" color: #87CEEB">
      <a href="Games/BTD1/">Bloons TD</a>
   <br>
 <a href="Games/BTD2/">Bloons TD 2</a>
