--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
 <html lang="en">
 <head><h1 style="font-family: Arial">
   <title>Leo's unblocked games</title>
-     <h1>Leo's unblocked games</h1>
+     <h1 style="color:white;font-family:Arial">Leo's unblocked games</h1>
 </p>
 </head> 
 <body style="background:#111111">
-  <p style="font-family: Arial"; "color: #87CEEB";>
+  <p style="font-family:Arial">
+    <style>
+a:link {
+  color: lightgray;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: lightgrey;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: lightgrey;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
      <a href="Games/BTD1/">Bloons TD</a>
   <br>
 <a href="Games/BTD2/">Bloons TD 2</a>
