--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </p>
 </head> 
 <body style="background:#111111">
-  <p style="font-family:Arial">
+  <p style="font-family:Arial;color:lightgray">
     <style>
 a:link {
   color: lightgray;
