--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <h1 style="color:white;font-family:Arial">Leo's unblocked games</h1>
 </p>
 </head> 
-<body style="background:#111111">
+<body style="background:#111111";font-family:Arial;color:lightgray>
   <p style="font-family:Arial;color:lightgray">
     <style>
 a:link {
