--- a/Games/BTD4/track-editor.html
+++ b/Games/BTD4/track-editor.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf8'>
     </head>
-    <body>
+    <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://memcat.pages.dev/ruffle/2023-11-13/ruffle.js'></script>
         <script>
