--- a/Games/BTD4/rank60.html
+++ b/Games/BTD4/rank60.html
@@ -5,7 +5,7 @@
         <title>Bloons TD 4 On Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
-    <body>
+   <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
