--- a/Games/BTD5/index.html
+++ b/Games/BTD5/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf8'>
     </head>
-    <body>
+    <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle/2023-06-06/ruffle.js'></script>
         <script>
