--- a/Games/forest_temple/index.html
+++ b/Games/forest_temple/index.html
@@ -5,7 +5,7 @@
      <h1>Fireboy and Watergirl - The Forest Temple</h1>
         <meta charset='utf8'>
     </head>
-    <body>
+    <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
