--- a/Games/learn-to-fly-3/index.html
+++ b/Games/learn-to-fly-3/index.html
@@ -5,7 +5,7 @@
       <h1>Learn To Fly 3</h1>
       <title>Learn To Fly 3 on Leo's Unblocked Games</title>
     </head>
-    <body>
+    <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle/2023-11-13/ruffle.js'></script>
         <script>
