--- a/Games/learn_to_fly/index.html
+++ b/Games/learn_to_fly/index.html
@@ -5,7 +5,7 @@
   <title>Learn to fly on Leo's unblocked games</title>
      <h1>Learn to Fly</h1>
 </head> 
-<body>
+<body style="background:#111111";font-family:Arial;color:lightgray>
  <script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
 <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
         <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://leoisbadatmakeingthings.github.io/idk/Games/learn_to_fly/learn-to-fly.swf" type="application/x-shockwave-flash" width="620"></embed>
