--- a/Games/run/index.html
+++ b/Games/run/index.html
@@ -6,7 +6,7 @@
           <title>Run(Flash) on Leo's unblocked games</title>
      <h1>Run(Flash)</h1>
     </head>
-    <body>
+<body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
