--- a/Games/run_2/index.html
+++ b/Games/run_2/index.html
@@ -6,7 +6,7 @@
           <title>Run 2 (Flash) on Leo's unblocked games</title>
      <h1>Run 2 (Flash)</h1>
     </head>
-    <body>
+    <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
