--- a/Games/worlds-hardest-game/index.html
+++ b/Games/worlds-hardest-game/index.html
@@ -6,7 +6,7 @@
         <title>World's Hardest Game On Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
-    <body>
+    <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
