--- a/Games/BTD2/index.html
+++ b/Games/BTD2/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bloons Tower Defense 2 on leo's unblocked games</title>
-     <h1>Bloons Tower Defense 2</h1>
+  <h1 style="color:white;font-family:Arial">Bloons TD 2</h1>
+        <title>Bloons TD 2 on Leo's Unblocked Games</title>
 </head> 
 <body style="background:#111111";font-family:Arial;color:lightgray>
  <script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
