--- a/Games/BTD3/index.html
+++ b/Games/BTD3/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset='utf8'>
+         <h1 style="color:white;font-family:Arial">Bloons TD 3</h1>
+        <title>Bloons TD 3 on Leo's Unblocked Games</title>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
