--- a/Games/BTD4/index.html
+++ b/Games/BTD4/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <h1>Bloons TD 4</h1>
-        <title>Bloons TD 4 On Leo's Unblocked Games</title>
+       <h1 style="color:white;font-family:Arial">Bloons TD 4</h1>
+        <title>Bloons TD 4 on Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
    <body style="background:#111111";font-family:Arial;color:lightgray>
