--- a/Games/BTD4/track-editor.html
+++ b/Games/BTD4/track-editor.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset='utf8'>
+         <h1 style="color:white;font-family:Arial">Bloons TD 4 Track Editor</h1>
+        <title>Bloons TD 4 Track Editor on Leo's Unblocked Games</title>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
@@ -22,5 +24,6 @@ swfobject.embedSWF = function(url, cont, width, height){
 
 swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD4/BTD4 Track editor medium.swf', 'ruffle', 500, 500);
         </script>
+        You cannot save tracks, you need to screenshot them and remake them!
     </body>
 </html>
