--- a/Games/BTD5/index.html
+++ b/Games/BTD5/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset='utf8'>
+         <h1 style="color:white;font-family:Arial">Bloons TD 5</h1>
+        <title>Bloons TD 5 on Leo's Unblocked Games</title>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
@@ -22,5 +24,6 @@ swfobject.embedSWF = function(url, cont, width, height){
 
 swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD5/WDzRSvadTXBNOR.swf', 'ruffle', 500, 500);
         </script>
+        Play easy mode and don't use the boomerang thrower for the best experience
     </body>
 </html>
