--- a/Games/forest_temple/index.html
+++ b/Games/forest_temple/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Fireboy and Watergirl - The Forest Temple on Leo's unblocked games</title>
-     <h1>Fireboy and Watergirl - The Forest Temple</h1>
+        <h1 style="color:white;font-family:Arial">Fireboy and Watergirl - the Forest Temple</h1>
+        <title>Fireboy and Watergirl - The Forest Temple on Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
