--- a/Games/learn_to_fly/index.html
+++ b/Games/learn_to_fly/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Learn to fly on Leo's unblocked games</title>
-     <h1>Learn to Fly</h1>
+ <h1 style="color:white;font-family:Arial">Learn to Fly</h1>
+        <title>Learn to Fly on Leo's Unblocked Games</title>
 </head> 
 <body style="background:#111111";font-family:Arial;color:lightgray>
  <script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
