--- a/Games/learn_to_fly_2/index.html
+++ b/Games/learn_to_fly_2/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset='utf8'>
+         <h1 style="color:white;font-family:Arial">Learn to Fly 2</h1>
+        <title>Learn to Fly 2 on Leo's Unblocked Games</title>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
