--- a/Games/learn-to-fly-3/index.html
+++ b/Games/learn-to-fly-3/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset='utf8'>
-      <h1>Learn To Fly 3</h1>
-      <title>Learn To Fly 3 on Leo's Unblocked Games</title>
+       <h1 style="color:white;font-family:Arial">Learn to Fly 3</h1>
+        <title>Learn to Fly 3 on Leo's Unblocked Games</title>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
