--- a/Games/run/index.html
+++ b/Games/run/index.html
@@ -3,8 +3,8 @@
     <head>
         
         <meta charset='utf8'>
-          <title>Run(Flash) on Leo's unblocked games</title>
-     <h1>Run(Flash)</h1>
+  <h1 style="color:white;font-family:Arial">Run</h1>
+        <title>Run on Leo's Unblocked Games</title>
     </head>
 <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
