--- a/Games/run_2/index.html
+++ b/Games/run_2/index.html
@@ -3,8 +3,8 @@
     <head>
         
         <meta charset='utf8'>
-          <title>Run 2 (Flash) on Leo's unblocked games</title>
-     <h1>Run 2 (Flash)</h1>
+     <h1 style="color:white;font-family:Arial">Run 2</h1>
+        <title>Run 2 on Leo's Unblocked Games</title>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
         <div id='ruffle'></div>
