--- a/Games/worlds-hardest-game/index.html
+++ b/Games/worlds-hardest-game/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <h1>World's Hardest Game</h1>
-        <title>World's Hardest Game On Leo's Unblocked Games</title>
+ <h1 style="color:white;font-family:Arial">World's Hardest Game</h1>
+        <title>World's Hardest Game on Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
     <body style="background:#111111";font-family:Arial;color:lightgray>
