--- a/Games/BTD4/index.html
+++ b/Games/BTD4/index.html
@@ -7,6 +7,28 @@
         <meta charset='utf8'>
     </head>
    <body style="background:#111111";font-family:Arial;color:lightgray>
+          <style>
+a:link {
+  color: lightgray;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: lightgrey;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: lightgrey;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
