--- a/Games/BTD4/index.html
+++ b/Games/BTD4/index.html
@@ -6,7 +6,7 @@
         <title>Bloons TD 4 on Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
-   <body style="background:#111111";font-family:Arial;color:lightgray>
+   <body style="background:#111111;font-family:Arial;color:lightgray">
           <style>
 a:link {
   color: lightgray;
