--- a/Games/BTD4/rank60.html
+++ b/Games/BTD4/rank60.html
@@ -5,7 +5,7 @@
         <title>Bloons TD 4 on Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
-   <body style="background:#111111";font-family:Arial;color:lightgray>
+   <body style="background:#111111;font-family:Arial;color:lightgray">
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle.js'></script>
         <script>
@@ -22,7 +22,7 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('https://memcat.pages.dev/Games/BTD4/bloonstd4rankmod.swf', 'ruffle', 500, 500);
+swfobject.embedSWF('https://memcat.pages.dev/Games/BTD4/bloonstd4rankmod.swf', 'ruffle', 480, 495);
         </script>
       Once you unlock the tack shooter for the first time, refresh the page and you should have everything unlocked. 
     </body>
