--- a/Games/BTD4E/index.html
+++ b/Games/BTD4E/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+              <h1 style="color:white;font-family:Arial">Bloons TD 4 Expansion</h1>
+        <title>Bloons TD 4 Expansion on Leo's Unblocked Games</title>
         <meta charset='utf8'>
     </head>
     <body>
@@ -20,7 +22,7 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD4E/btd42.swf', 'ruffle', 500, 500);
+swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD4E/btd42.swf', 'ruffle', 485, 485);
         </script>
     </body>
 </html>
