--- a/Games/BTD5/index.html
+++ b/Games/BTD5/index.html
@@ -5,7 +5,7 @@
          <h1 style="color:white;font-family:Arial">Bloons TD 5</h1>
         <title>Bloons TD 5 on Leo's Unblocked Games</title>
     </head>
-    <body style="background:#111111";font-family:Arial;color:lightgray>
+    <body style="background:#111111;font-family:Arial;color:lightgray">
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle/2023-06-06/ruffle.js'></script>
         <script>
@@ -22,7 +22,7 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD5/WDzRSvadTXBNOR.swf', 'ruffle', 500, 500);
+swfobject.embedSWF('https://leoisbadatmakeingthings.github.io/idk/Games/BTD5/WDzRSvadTXBNOR.swf', 'ruffle', 640, 480);
         </script>
         Play easy mode and don't use the boomerang thrower for the best experience
     </body>
