--- a/Games/learn-to-fly-3/index.html
+++ b/Games/learn-to-fly-3/index.html
@@ -5,7 +5,7 @@
        <h1 style="color:white;font-family:Arial">Learn to Fly 3</h1>
         <title>Learn to Fly 3 on Leo's Unblocked Games</title>
     </head>
-    <body style="background:#111111";font-family:Arial;color:lightgray>
+    <body style="background:#111111;font-family:Arial;color:lightgray">
         <div id='ruffle'></div>
         <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle/2023-11-13/ruffle.js'></script>
         <script>
