--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ a:active {
   <br>
    <a href="Games/Dr_mario/">Dr. Mario</a>
   <br>
+    <a href="Games/tetris/">Tetris</a>
+    <br>
        <a href="Games/smb1/">Super Mario Bros.</a>
   <br>
        <a href="Games/smb3/">Super Mario Bros. 3</a>
