--- a/Games/BTD5/index.html
+++ b/Games/BTD5/index.html
@@ -7,7 +7,7 @@
     </head>
     <body style="background:#111111;font-family:Arial;color:lightgray">
         <div id='ruffle'></div>
-        <script src='https://leoisbadatmakeingthings.github.io/idk/ruffle/2023-06-06/ruffle.js'></script>
+        <script src='https://memcat.pages.dev/ruffle/2024-1-11/ruffle.js'></script>
         <script>
 var swfobject = {};
 
