--- a/Games/BTD4/track-editor.html
+++ b/Games/BTD4/track-editor.html
@@ -5,7 +5,7 @@
          <h1 style="color:white;font-family:Arial">Bloons TD 4 Track Editor</h1>
         <title>Bloons TD 4 Track Editor on Leo's Unblocked Games</title>
     </head>
-    <body style="background:#111111";font-family:Arial;color:lightgray>
+    <body style="background:#111111;font-family:Arial;color:lightgray">
         <div id='ruffle'></div>
         <script src='https://memcat.pages.dev/ruffle/2023-11-13/ruffle.js'></script>
         <script>
