--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ a:active {
     <br>
     <a href="Games/worlds-hardest-game/">World's Hardest Game</a>
   <br>
+      <a href="Games/worlds-hardest-game-2/">World's Hardest Game 2</a>
+  <br>
     <a href="Games/super_mario_world/">Super Mario World</a>
   <br>
         <a href="Games/sm64js/index.html">Super Mario 64</a>
