--- a/Games/tetrisattack/index.html
+++ b/Games/tetrisattack/index.html
@@ -16,7 +16,7 @@
             EJS_gameName = "Tetris Attack";
             EJS_color = "#0097c4";
             EJS_pathtodata = "https://leoisbadatmakeingthings.github.io/idk/data/";
-            EJS_gameUrl = "https://leoisbadatmakeingthings.github.io/idk/Games/tetrisattack/game.zip";</script>
+            EJS_gameUrl = "https://memcat2.pages.dev/Games/tetrisattack/game.zip";</script>
     <script src="https://leoisbadatmakeingthings.github.io/idk/data/loader.js"></script>
 </body>
 </html>
