--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ a:active {
   <br>
     <a href="Games/tetris/">Tetris</a>
     <br>
+        <a href="Games/tetrisattack/">Tetris Attack</a>
+    <br>
        <a href="Games/smb1/">Super Mario Bros.</a>
   <br>
        <a href="Games/smb3/">Super Mario Bros. 3</a>
