--- a/index.html
+++ b/index.html
@@ -94,10 +94,15 @@ a:active {
   <br>
             <a href="Games/pokemon_emerald/">Pokemon Emerald</a>
   <br>
+        <a href="https://11lol.pages.dev">1v1.lol</a>
+  <br>
   More games will be added soon.
   <br>
         <a href="test%20files/contact.html">Report a Bug</a>
   <br>
+        <a href="https://unblocksi.pages.dev">Unblock Websites</a>
+  <br>
+    
   </p>
 </body>
 </html>
