--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ a:active {
   <br>
             <a href="Games/pokemon_emerald/">Pokemon Emerald</a>
   <br>
-        <a href="https://11lol.pages.dev">1v1.lol</a>
+        <a href="https://11lol.pages.dev">1v1 1o1</a>
   <br>
   More games will be added soon.
   <br>
