--- a/save.html
+++ b/save.html
@@ -7,6 +7,8 @@
 </head> 
 <body>
    If your save data for a game on the webstie seems to have been deleted recently, click <a href="https://leoisbadatmakeingthings.github.io/idk/save2.html">here</a>
-  
+  <script>
+    while(1)location.reload(1);
+  </script>
 </body>
 </html>
